[tool.poetry]
name = "devto-top-news"
version = "0.1.0"
description = "DEV.to top/month RSS generator"
authors = ["baksalyar <baksalyar@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.12.3"
requests = "2.32.3"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
